--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://dpg-cmn5f2ug1b2c7396pil0-a/tictactoegame
+#spring.datasource.url=jdbc:postgresql://dpg-cmn5f2ug1b2c7396pil0-a.frankfurt-postgres.render.com/tictactoegame
 spring.datasource.username=tictactoegame_user
 spring.datasource.password=gov80IsHXDZQXqmzTQSi0MFc0xkUAhcv
 
